<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/managebabie"
            android:icon="@drawable/ipsettings"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/viewvideos"
            android:icon="@drawable/ipsettings"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/noti"
            android:icon="@drawable/ipsettings"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/doc"
            android:icon="@drawable/ipsettings"
            android:title="@string/doc" />
        <item
            android:id="@+id/asha"
            android:icon="@drawable/ipsettings"
            android:title="@string/asha" />

        <item
            android:id="@+id/appointment"
            android:icon="@drawable/ipsettings"
            android:title="@string/appointment" />

        <item
            android:id="@+id/prec"
            android:icon="@drawable/ipsettings"
            android:title="@string/prec" />
        <item
            android:id="@+id/vaccinereq"
            android:icon="@drawable/ipsettings"
            android:title="@string/vccine" />
        <item
            android:id="@+id/feedback"
            android:icon="@drawable/ipsettings"
            android:title="@string/feedback" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ipsettings"
            android:title="@string/logout" />

    </group>
</menu>